--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "require": {
         "neos/flow": "*"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.78",
+        "squizlabs/php_codesniffer": "3.*"
+    },
     "autoload": {
         "psr-4": {
             "Sitegeist\\StaleMate\\": "Classes/"
@@ -14,6 +18,16 @@
     "extra": {
         "neos": {
             "package-key": "Sitegeist.StaleMate"
+        }
+    },
+    "scripts": {
+        "test:lint": ["vendor/bin/phpcs --standard=PSR12 Classes"],
+        "test:stan": ["vendor/bin/phpstan analyse Classes"],
+        "test": ["composer install", "composer  test:lint", "composer  test:stan"]
+    },
+    "config": {
+        "allow-plugins": {
+            "neos/composer-plugin": true
         }
     }
 }
