--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,13 @@ on:
   push:
       branches:
         - 'main'
-  pull_request: ~
+  pull_request:
+      branches:
+        - 'main'
 
 jobs:
     test:
-        name: "Test (PHP ${{ matrix.php-versions }}, Neos ${{ matrix.flow-versions }})"
+        name: "Test (PHP ${{ matrix.php-versions }}, Flow ${{ matrix.flow-versions }})"
 
         strategy:
             fail-fast: false
