--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,13 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php-versions: []
-                flow-versions: []
+                php-versions: ["8.1"]
+                flow-versions: ["8.1"]
                 include:
                   - php-versions: '7.3'
                     flow-versions: '7.3'
                   - php-versions: '8.0'
                     flow-versions: '8.0'
-                  - php-versions: '8.1'
-                    flow-versions: '8.1'
 
         runs-on: ubuntu-latest
 
