--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,13 @@ jobs:
                     flow-versions: '7.3'
                   - php-versions: '8.0'
                     flow-versions: '8.0'
-
+                  - php-versions: '8.3'
+                    flow-versions: '8.3'
         runs-on: ubuntu-latest
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
               with:
                   path: ${{ env.FLOW_FOLDER }}
 
